
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cryptvault"
version = "0.1.0"
description = "Secure cryptography library for CryptVault Secrets"
authors = [
    {name = "Matheus Moreira", email = "mt8moreira@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["cryptography", "security", "encryption", "CVS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.maturin]
bindings = "pyo3"
